fixes #22 and bump to 1.3.0

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "character-sheet-5e",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Online character sheet for D&D",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/derikb/character-sheet-5e.git"
   },
-   "bugs": {
+  "bugs": {
     "url": "https://github.com/derikb/character-sheet-5e/issues"
   },
   "homepage": "https://github.com/derikb/character-sheet-5e#readme",
@@ -18,7 +18,7 @@
     "concat:css": "cat ./node_modules/normalize.css/normalize.css src/styles.css | cleancss -o styles.css",
     "browserify": "./node_modules/.bin/browserify src/main.js --s charsheet -o main.js -t [ babelify --presets [ es2015 ] ]",
     "browserify:min": "./node_modules/.bin/browserify src/main.js --s charsheet -o main.min.js -t [ babelify --presets [ es2015 ] ] -d -p [minifyify --map main.js.map --output main.js.map]",
-    "versioncache": "sed -i \"\" \"s/v[0-9.]\\+/v${npm_package_version}/\" site.manifest service_worker.js",
+    "versioncache": "node build/version_bump.js",
     "build": "npm run browserify:min && npm run concat:css && npm run versioncache"
   },
   "keywords": [
@@ -37,6 +37,7 @@
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.0",
     "minifyify": "^7.3.3",
-    "normalize.css": "^4.2.0"
+    "normalize.css": "^4.2.0",
+    "replace-in-file": "^2.0.1"
   }
 }
