--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "clean-css": "^4.2.1",
+    "clean-css-cli": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-promise": "^4.2.1",
