--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,9 @@
         ],
 	    "no-trailing-spaces": ["error", { "skipBlankLines": true }],
 	    "camelcase": [ "off" ],
-	    "prefer-const": [ "error" ]
+	    "prefer-const": [ "error" ],
+        "lines-between-class-members": [
+            "off"
+        ]
     }
 }
