--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
     "name": "CharSheet.5e.",
     "icons": [
         {
-            "src": "\/android-chrome-192x192.png",
+            "src": ".\/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image\/png"
         }
