--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "character-sheet-5e",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Online character sheet for D&D",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
   },
   "standard-version": {
     "scripts": {
-      "postbump": "npm run build && git add ./dist/service_worker.js"
+      "postbump": "npm run build && git add ./dist/service_worker.js ./dist/service_worker.js.map ./dist/index.js ./dist/index.js.map ./dist/styles.css ./dist/styles.css.map"
     },
     "bumpFiles": [
       "package.json",
