--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   "author": "Derik A Badman",
   "license": "GPL-3.0",
   "dependencies": {
-    "firebase": "^9.8.3",
-    "rpg-table-randomizer": "^1.3.0"
+    "firebase": "^9.16.0",
+    "rpg-table-randomizer": "^1.3.2"
   },
   "devDependencies": {
-    "esbuild": "^0.14.43",
-    "eslint": "^8.17.0",
+    "commit-and-tag-version": "^11.0.0",
+    "esbuild": "^0.17.5",
+    "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "normalize.css": "^8.0.1",
-    "standard-version": "^9.5.0"
+    "eslint-plugin-promise": "^6.1.1",
+    "normalize.css": "^8.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "esbuild --serve=8080 --servedir=./dist ./src/styles.css ./src/index.js ./src/service_worker.js --outdir=./dist --loader:.svg=dataurl --loader:.html=file --bundle",
     "build": "esbuild ./src/styles.css ./src/index.js ./src/service_worker.js --outdir=./dist --loader:.svg=dataurl --loader:.html=file --minify --sourcemap --bundle",
-    "release": "standard-version -a",
+    "release": "commit-and-tag-version -a",
     "eslint": "eslint ./src"
   },
-  "standard-version": {
+  "commit-and-tag-version": {
     "scripts": {
       "postbump": "npm run build && git add ./dist/service_worker.js ./dist/service_worker.js.map ./dist/index.js ./dist/index.js.map ./dist/styles.css ./dist/styles.css.map"
     },
