--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "eslint.experimental.useFlatConfig": true,
+    "eslint.validate": [
+        "javascript"
+    ],
     "cSpell.ignorePaths": [
         "package-lock.json",
         "node_modules",
